cluster/apps/external/ubooquity/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app ubooquity
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 2202

---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app ubooquity
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 192.168.69.101
    ports:
      - port: 2202
